fetchのURLを変更(../md/ → md/)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         async function fetch_md() {
             try {
                 // 取得
-                const fetch_response = await fetch("../md/");
+                const fetch_response = await fetch("md/");
                 const fetch_dir_html = await fetch_response.text();
 
                 // DOMParser
